--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,20 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
+<form action="/landmarks/<%= @landmark.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <br>
+    <label>Landmark Name:</label>
+    <br>
+    <input type="text" name ="landmark[name]" id="name" value="<%= @landmark.name %>">
+    <br>
+    <label>Landmark Year:</label>
+    <br>
+    <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed%>">>
+    <br>
+  
+  <input type="submit" value="Edit Landmark">
+</form>
+
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
