--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,22 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
+<form action = "/landmarks/<%=@landmark.id%>" method = "POST">
+<input id="hidden" type="hidden" name="_method" value="patch">
+
+<label for = "name">Name:</label>
+<input type = "text" name = "landmark[name]" id = "name">
+
+<p><%=@landmark.name%></p>
+
+<label for = "year_completed">Year:</label>
+<input type = "text" name = "landmark[year_completed]" id = "year_completed">
+
+<p><%=@landmark.year_completed.to_s%></p>
+
+<input type="submit" value ="Edit Landmark">
+</form>
+
+<br>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
